# ghpdf

./: README.md  pyproject.toml
src/md2pdf/: cli.py  converter.py  main.py
src/md2pdf/static/: github.css
