[project]
name = "md2pdf"
version = "1.0.0"
description = "Markdown to PDF converter with GitHub-style rendering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "markdown>=3.7",
    "weasyprint>=62.0",
    "pygments>=2.18.0",
    "pydantic>=2.9.0",
]

[project.scripts]
md2pdf = "md2pdf.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2pdf"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
