[project]
name = "md2pdf"
version = "1.0.0"
description = "Markdown to PDF converter with GitHub-style rendering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.7",
    "weasyprint>=62.0",
    "pygments>=2.18.0",
    "typer>=0.12.0",
]

[project.scripts]
md2pdf = "md2pdf.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2pdf"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
